k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nagp-api
  namespace: nagp-assignment
  labels:
    app: nagp-api
    tier: api
spec:
  replicas: 4
  selector:
    matchLabels:
      app: nagp-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: nagp-api
        tier: api
    spec:
      containers:
        - name: nagp-api
          image: shbhmgarg/nagp-api:v1
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
